# api_story_teller

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
app/core/: config.py
app/db/: session.py
docker/: Dockerfile
